RESOLVED FIXED301665
Work around CF timers not being serviced promptly
https://bugs.webkit.org/show_bug.cgi?id=301665
Summary Work around CF timers not being serviced promptly
Ben Nham
Reported 2025-10-29 15:53:00 PDT
See PR
Attachments
Ben Nham
Comment 1 2025-10-29 15:53:01 PDT
Ben Nham
Comment 2 2025-10-29 15:55:54 PDT
EWS
Comment 3 2025-11-03 21:42:24 PST
Committed 302518@main (7b65bcf29a4d): <https://commits.webkit.org/302518@main> Reviewed commits have been landed. Closing PR #53174 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.